RESOLVED FIXED231005
REGRESSION (Monterey): paramountplus.com: Cannot enter fullscreen in Safari
https://bugs.webkit.org/show_bug.cgi?id=231005
Summary REGRESSION (Monterey): paramountplus.com: Cannot enter fullscreen in Safari
Jean-Yves Avenard [:jya]
Reported 2021-09-29 23:41:20 PDT
REGRESSION (Monterey): paramountplus.com: Cannot enter fullscreen in Safari
Attachments
Patch (2.85 KB, patch)
2021-09-29 23:52 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (2.99 KB, patch)
2021-09-29 23:55 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (12.17 KB, patch)
2021-10-01 05:50 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (12.16 KB, patch)
2021-10-01 06:01 PDT, Jean-Yves Avenard [:jya]
ews-feeder: commit-queue-
Patch (12.33 KB, patch)
2021-10-01 06:07 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (19.22 KB, patch)
2021-10-02 00:54 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (4.32 KB, patch)
2021-10-05 00:01 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2021-09-29 23:42:03 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-09-29 23:52:44 PDT
Jean-Yves Avenard [:jya]
Comment 3 2021-09-29 23:55:17 PDT
Created attachment 439702 [details] Patch Improve ChangeLog
Eric Carlson
Comment 4 2021-09-30 08:32:02 PDT
Comment on attachment 439702 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=439702&action=review > Source/WebCore/ChangeLog:14 > + We do not have the infrastructure to easily test interactiong with encrypted s/interactiong/interacting/
Jean-Yves Avenard [:jya]
Comment 5 2021-09-30 15:40:50 PDT
turn out this will break readbacks with HLS content
Jean-Yves Avenard [:jya]
Comment 6 2021-10-01 05:50:04 PDT
Jean-Yves Avenard [:jya]
Comment 7 2021-10-01 06:01:01 PDT
Created attachment 439845 [details] Patch rebase
Jean-Yves Avenard [:jya]
Comment 8 2021-10-01 06:07:59 PDT
Created attachment 439846 [details] Patch fix header on non-internal build
Jean-Yves Avenard [:jya]
Comment 9 2021-10-02 00:54:14 PDT
Created attachment 439960 [details] Patch Remove AVAssetTrack SPI, it crashes ; instead do what it does internally (but simplified with no memory allocation
Jean-Yves Avenard [:jya]
Comment 10 2021-10-05 00:01:04 PDT
Created attachment 440169 [details] Patch As discussed, only implement the easy workaround and avoid the use of new SPI
EWS
Comment 11 2021-10-05 16:28:12 PDT
Committed r283583 (242541@main): <https://commits.webkit.org/242541@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440169 [details].
Note You need to log in before you can comment on or make changes to this bug.